--- a/index.html
+++ b/index.html
@@ -39,23 +39,63 @@
             </div>  
         </div>
         <div class="grid-item item6">
-            <h2>Galeria - Fase de Grupo</h2>
+            <h2>Los Mejores Momentos</h2>
+            <h2>FASE DE GRUPOS</h2>
             <ul class="galeria">
-                <li><a href="#img" onclick="cargar_imagen('caja1')"><img id="caja1" src="img/1.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja2')"><img id="caja2" src="img/2.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja3')"><img id="caja3" src="img/3.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja4')"><img id="caja4" src="img/4.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja5')"><img id="caja5" src="img/5.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja6')"><img id="caja6" src="img/6.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja7')"><img id="caja7" src="img/7.jpg" alt=""></a></li>
-                <li><a href="#img" onclick="cargar_imagen('caja8')"><img id="caja8" src="img/8.jpg" alt=""></a></li>
+                <li><a href="#img" onclick="cargar_imagen('caja1',1,'FASE DE GRUPOS')"><img id="caja1" src="img/1.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>             
+                <li><a href="#img" onclick="cargar_imagen('caja2',2,'FASE DE GRUPOS')"><img id="caja2" src="img/2.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja3',3,'FASE DE GRUPOS')"><img id="caja3" src="img/3.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja4',4,'FASE DE GRUPOS')"><img id="caja4" src="img/4.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja5',5,'FASE DE GRUPOS')"><img id="caja5" src="img/5.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja6',6,'FASE DE GRUPOS')"><img id="caja6" src="img/6.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja7',7,'FASE DE GRUPOS')"><img id="caja7" src="img/7.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+            </ul>
+            <h2>OCTAVOS DE FINAL</h2>
+            <ul class="galeria">
+                <li><a href="#img" onclick="cargar_imagen('caja8',8,'OCTAVOS DE FINAL')"><img id="caja8" src="img/8.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja9',9,'OCTAVOS DE FINAL')"><img id="caja9" src="img/9.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>             
+                <li><a href="#img" onclick="cargar_imagen('caja10',10,'OCTAVOS DE FINAL')"><img id="caja10" src="img/10.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja11',11,'OCTAVOS DE FINAL')"><img id="caja11" src="img/11.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja12',12,'OCTAVOS DE FINAL')"><img id="caja12" src="img/12.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja13',13,'OCTAVOS DE FINAL')"><img id="caja13" src="img/13.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja14',14,'OCTAVOS DE FINAL')"><img id="caja14" src="img/14.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+            </ul>
+            <h2>CUARTOS DE FINAL</h2>
+            <ul class="galeria">
+                <li><a href="#img" onclick="cargar_imagen('caja15',15,'CUARTOS DE FINAL')"><img id="caja15" src="img/15.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja16',16,'CUARTOS DE FINAL')"><img id="caja16" src="img/16.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>             
+                <li><a href="#img" onclick="cargar_imagen('caja17',17,'CUARTOS DE FINAL')"><img id="caja17" src="img/17.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja18',18,'CUARTOS DE FINAL')"><img id="caja18" src="img/18.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja19',19,'CUARTOS DE FINAL')"><img id="caja19" src="img/19.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja20',20,'CUARTOS DE FINAL')"><img id="caja20" src="img/20.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja21',21,'CUARTOS DE FINAL')"><img id="caja21" src="img/21.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+            </ul>
+            <h2>SEMIFINAL</h2>
+            <ul class="galeria">
+                <li><a href="#img" onclick="cargar_imagen('caja22',22,'SEMIFINAL')"><img id="caja22" src="img/22.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja23',23,'SEMIFINAL')"><img id="caja23" src="img/23.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>             
+                <li><a href="#img" onclick="cargar_imagen('caja24',24,'SEMIFINAL')"><img id="caja24" src="img/24.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja25',25,'SEMIFINAL')"><img id="caja25" src="img/25.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja26',26,'SEMIFINAL')"><img id="caja26" src="img/26.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja27',27,'SEMIFINAL')"><img id="caja27" src="img/27.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja28',28,'SEMIFINAL')"><img id="caja28" src="img/28.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+            </ul>
+            <h2>FINAL</h2>
+            <ul class="galeria">
+                <li><a href="#img" onclick="cargar_imagen('caja29',29,'FINAL')"><img id="caja29" src="img/29.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja30',30,'FINAL')"><img id="caja30" src="img/30.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>             
+                <li><a href="#img" onclick="cargar_imagen('caja31',31,'FINAL')"><img id="caja31" src="img/31.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja32',32,'FINAL')"><img id="caja32" src="img/32.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja33',33,'FINAL')"><img id="caja33" src="img/33.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja34',34,'FINAL')"><img id="caja34" src="img/34.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
+                <li><a href="#img" onclick="cargar_imagen('caja35',35,'FINAL')"><img id="caja35" src="img/35.jpg" alt=""></a><h4>Titulo</h4><p>Lorem ipsum dolor sit amet consectfff fffffffff ffffffetur adipisicing elit. Harum, earum? Aperiam, illo dolor</p></li>
             </ul>
             <div class="modo" id="img">
-                <h3>Foto 1</h3>
-                <div class="imagen">
-                    <a href="">&#60;</a>
+                <h3 id="titulo">LOCOS X LA ESCALONETA</h3>
+                <div class="imagen">              
+                    <div onclick="anterior_imagen()">&#60;</div>
                     <a href=""><img id="monitor" src="" alt=""></a>
-                    <a href="" onclick="siguiente_imagen()">></a>
+                    <div onclick="siguiente_imagen()">></div>
                 </div>
                 <a class= "cerrar" href="">X</a>
             </div>
